<resources>
    <string name="app_name">资芽</string>
    <string name="login_editText_userName">请输入手机号</string>
    <string name="login_editText_pwd">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_find_pwd">找回密码?</string>
    <string name="register_editText_username">请输入手机号</string>
    <string name="register_edit_smsCode">请输入验证码</string>
    <string name="register_button_getsmsCode">获取验证码</string>
    <string name="register_editText_pwd_one_new">请输入密码</string>
    <string name="register_editText_pwd_one">请输入新密码</string>
    <string name="register_editText_pwd_two">请再次输入密码</string>
    <string name="register_checkBox">已经阅读并同意</string>
    <string name="register_button_register">注册</string>
    <string name="findPwd_button_OK">确定</string>
    <string name="play_error_message">Impossible to play the video.</string>
    <string name="play_progressive_error_message">Impossible to play the progressive video.</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string-array name="province">
        <item>全国</item>
        <item>山东</item>
        <item>江苏</item>
        <item>安徽</item>
        <item>浙江</item>
        <item>福建</item>
        <item>上海</item>
        <item>广东</item>
        <item>广西</item>
        <item>海南</item>
        <item>湖北</item>
        <item>湖南</item>
        <item>河南</item>
        <item>江西</item>
        <item>北京</item>
        <item>天津</item>
        <item>河北</item>
        <item>山西</item>
        <item>内蒙古</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>青海</item>
        <item>陕西</item>
        <item>甘肃</item>
        <item>四川</item>
        <item>云南</item>
        <item>贵州</item>
        <item>西藏</item>
        <item>重庆</item>
        <item>辽宁</item>
        <item>吉林</item>
        <item>黑龙江</item>
        <item>台湾</item>
        <item>香港</item>
        <item>澳门</item>
    </string-array>
    <string-array name="province_item">
        <item>全国</item>
        <item>北京市</item>
        <item>天津市</item>
        <item>河北省</item>
        <item>山西省</item>
        <item>内蒙古</item>
        <item>辽宁省</item>
        <item>吉林省</item>
        <item>黑龙江省</item>
        <item>上海市</item>
        <item>江苏省</item>
        <item>浙江省</item>
        <item>安徽省</item>
        <item>福建省</item>
        <item>江西省</item>
        <item>山东省</item>
        <item>河南省</item>
        <item>湖北省</item>
        <item>湖南省</item>
        <item>广东省</item>
        <item>广西</item>
        <item>海南省</item>
        <item>重庆市</item>
        <item>四川省</item>
        <item>贵州省</item>
        <item>云南省</item>
        <item>西藏</item>
        <item>陕西省</item>
        <item>甘肃省</item>
        <item>青海省</item>
        <item>宁夏</item>
        <item>新疆</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台湾省</item>
    </string-array>
    <string-array name="all_province_item">
        <item>不限</item>
    </string-array>
    <string-array name="beijin_province_item">
        <item>不限</item>
        <item>东城区</item>
        <item>西城区</item>
        <item>崇文区</item>
        <item>宣武区</item>
        <item>朝阳区</item>
        <item>丰台区</item>
        <item>石景山区</item>
        <item>海淀区</item>
        <item>门头沟区</item>
        <item>房山区</item>
        <item>通州区</item>
        <item>顺义区</item>
        <item>昌平区</item>
        <item>大兴区</item>
        <item>怀柔区</item>
        <item>平谷区</item>
        <item>密云县</item>
        <item>延庆县</item>
    </string-array>
    <string-array name="tianjin_province_item">
        <item>不限</item>
        <item>和平区</item>
        <item>河东区</item>
        <item>河西区</item>
        <item>南开区</item>
        <item>河北区</item>
        <item>红桥区</item>
        <item>塘沽区</item>
        <item>汉沽区</item>
        <item>大港区</item>
        <item>东丽区</item>
        <item>西青区</item>
        <item>津南区</item>
        <item>北辰区</item>
        <item>武清区</item>
        <item>宝坻区</item>
        <item>宁河县</item>
        <item>静海县</item>
        <item>蓟县</item>
    </string-array>
    <string-array name="heibei_province_item">
        <item>不限</item>
        <item>石家庄市</item>
        <item>唐山市</item>
        <item>秦皇岛市</item>
        <item>邯郸市</item>
        <item>邢台市</item>
        <item>保定市</item>
        <item>张家口市</item>
        <item>承德市</item>
        <item>沧州市</item>
        <item>廊坊市</item>
        <item>衡水市</item>
    </string-array>
    <string-array name="shanxi1_province_item">
        <item>不限</item>
        <item>太原市</item>
        <item>大同市</item>
        <item>阳泉市</item>
        <item>长治市</item>
        <item>晋城市</item>
        <item>朔州市</item>
        <item>晋中市</item>
        <item>运城市</item>
        <item>忻州市</item>
        <item>临汾市</item>
        <item>吕梁市</item>
    </string-array>
    <string-array name="neimenggu_province_item">
        <item>不限</item>
        <item>呼和浩特市</item>
        <item>包头市</item>
        <item>乌海市</item>
        <item>赤峰市</item>
        <item>通辽市</item>
        <item>鄂尔多斯市</item>
        <item>呼伦贝尔市</item>
        <item>巴彦淖尔市</item>
        <item>乌兰察布市</item>
        <item>兴安盟</item>
        <item>锡林郭勒盟</item>
        <item>阿拉善</item>
    </string-array>
    <string-array name="liaoning_province_item">
        <item>不限</item>
        <item>沈阳市</item>
        <item>大连市</item>
        <item>鞍山市</item>
        <item>抚顺市</item>
        <item>本溪市</item>
        <item>丹东市</item>
        <item>锦州市</item>
        <item>营口市</item>
        <item>阜新市</item>
        <item>辽阳市</item>
        <item>盘锦市</item>
        <item>铁岭市</item>
        <item>朝阳市</item>
        <item>葫芦岛市</item>
    </string-array>
    <string-array name="jilin_province_item">
        <item>不限</item>
        <item>长春市</item>
        <item>吉林市</item>
        <item>四平市</item>
        <item>辽源市</item>
        <item>通化市</item>
        <item>白山市</item>
        <item>松原市</item>
        <item>白城市</item>
        <item>延边州</item>
    </string-array>
    <string-array name="heilongjiang_province_item">
        <item>不限</item>
        <item>哈尔滨市</item>
        <item>齐齐哈尔市</item>
        <item>鸡西市</item>
        <item>鹤岗市</item>
        <item>双鸭山市</item>
        <item>大庆市</item>
        <item>伊春市</item>
        <item>佳木斯市</item>
        <item>七台河市</item>
        <item>牡丹江市</item>
        <item>黑河市</item>
        <item>绥化市</item>
        <item>大兴安岭地区</item>
    </string-array>
    <string-array name="shanghai_province_item">
        <item>不限</item>
        <item>黄浦区</item>
        <item>徐汇区</item>
        <item>长宁区</item>
        <item>静安区</item>
        <item>普陀区</item>
        <item>闸北区</item>
        <item>虹口区</item>
        <item>杨浦区</item>
        <item>闵行区</item>
        <item>宝山区</item>
        <item>嘉定区</item>
        <item>浦东新区</item>
        <item>金山区</item>
        <item>松江区</item>
        <item>青浦区</item>
        <item>奉贤区</item>
        <item>崇明县</item>

    </string-array>
    <string-array name="jiangsu_province_item">
        <item>不限</item>
        <item>南京市</item>
        <item>无锡市</item>
        <item>徐州市</item>
        <item>常州市</item>
        <item>苏州市</item>
        <item>南通市</item>
        <item>连云港市</item>
        <item>淮安市</item>
        <item>盐城市</item>
        <item>扬州市</item>
        <item>镇江市</item>
        <item>泰州市</item>
        <item>宿迁市</item>
    </string-array>
    <string-array name="zhejiang_province_item">
        <item>不限</item>
        <item>杭州市</item>
        <item>宁波市</item>
        <item>温州市</item>
        <item>嘉兴市</item>
        <item>湖州市</item>
        <item>绍兴市</item>
        <item>金华市</item>
        <item>衢州市</item>
        <item>舟山市</item>
        <item>台州市</item>
        <item>丽水市</item>
    </string-array>
    <string-array name="anhui_province_item">
        <item>不限</item>
        <item>合肥市</item>
        <item>芜湖市</item>
        <item>蚌埠市</item>
        <item>淮南市</item>
        <item>马鞍山市</item>
        <item>淮北市</item>
        <item>铜陵市</item>
        <item>安庆市</item>
        <item>黄山市</item>
        <item>滁州市</item>
        <item>阜阳市</item>
        <item>宿州市</item>
        <item>巢湖市</item>
        <item>六安市</item>
        <item>亳州市</item>
        <item>池州市</item>
        <item>宣城市</item>
    </string-array>
    <string-array name="fujian_province_item">
        <item>不限</item>
        <item>福州市</item>
        <item>厦门市</item>
        <item>莆田市</item>
        <item>三明市</item>
        <item>泉州市</item>
        <item>漳州市</item>
        <item>南平市</item>
        <item>龙岩市</item>
        <item>宁德市</item>
    </string-array>
    <string-array name="jiangxi_province_item">
        <item>不限</item>
        <item>南昌市</item>
        <item>景德镇市</item>
        <item>萍乡市</item>
        <item>九江市</item>
        <item>新余市</item>
        <item>鹰潭市</item>
        <item>赣州市</item>
        <item>吉安市</item>
        <item>宜春市</item>
        <item>抚州市</item>
        <item>上饶市</item>
    </string-array>
    <string-array name="shandong_province_item">
        <item>不限</item>
        <item>济南市</item>
        <item>青岛市</item>
        <item>淄博市</item>
        <item>枣庄市</item>
        <item>东营市</item>
        <item>烟台市</item>
        <item>潍坊市</item>
        <item>济宁市</item>
        <item>泰安市</item>
        <item>威海市</item>
        <item>日照市</item>
        <item>莱芜市</item>
        <item>临沂市</item>
        <item>德州市</item>
        <item>聊城市</item>
        <item>滨州市</item>
        <item>荷泽市</item>
    </string-array>
    <string-array name="henan_province_item">
        <item>不限</item>
        <item>郑州市</item>
        <item>开封市</item>
        <item>洛阳市</item>
        <item>平顶山市</item>
        <item>安阳市</item>
        <item>鹤壁市</item>
        <item>新乡市</item>
        <item>焦作市</item>
        <item>濮阳市</item>
        <item>许昌市</item>
        <item>漯河市</item>
        <item>三门峡市</item>
        <item>南阳市</item>
        <item>商丘市</item>
        <item>信阳市</item>
        <item>周口市</item>
        <item>驻马店市</item>
        <item>济源市</item>
    </string-array>
    <string-array name="hubei_province_item">
        <item>不限</item>
        <item>武汉市</item>
        <item>黄石市</item>
        <item>十堰市</item>
        <item>宜昌市</item>
        <item>襄阳市</item>
        <item>鄂州市</item>
        <item>荆门市</item>
        <item>孝感市</item>
        <item>荆州市</item>
        <item>黄冈市</item>
        <item>咸宁市</item>
        <item>随州市</item>
        <item>恩施州</item>
        <item>仙桃市</item>
        <item>潜江市</item>
        <item>天门市</item>
        <item>神农架</item>
        <item>江汉油田</item>
    </string-array>
    <string-array name="hunan_province_item">
        <item>不限</item>
        <item>长沙市</item>
        <item>株洲市</item>
        <item>湘潭市</item>
        <item>衡阳市</item>
        <item>邵阳市</item>
        <item>岳阳市</item>
        <item>常德市</item>
        <item>张家界市</item>
        <item>益阳市</item>
        <item>郴州市</item>
        <item>永州市</item>
        <item>怀化市</item>
        <item>娄底市</item>
        <item>湘西</item>
    </string-array>
</resources>