<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fitsSystemWindows="true"
    tools:context="com.ziyawang.ziya.activity.FindPwdActivity">


    <RelativeLayout
        android:id="@+id/register_relative_head"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <RelativeLayout
            android:id="@+id/pre"
            android:layout_width="50dp"
            android:layout_height="50dp">

            <ImageView
                android:paddingLeft="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/pre" />

        </RelativeLayout>

        <TextView
            android:textSize="18dp"
            android:textColor="#999"
            android:text="找回密码"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <ScrollView
        android:layout_below="@id/register_relative_head"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/login_img"
                android:src="@mipmap/register_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RelativeLayout
                android:layout_below="@id/login_img"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/login_uesrname"
                android:layout_marginTop="40dp"
                android:id="@+id/register_relative_userName"
                android:layout_width="match_parent"
                android:layout_height="38dp">

                <ImageView
                    android:src="@mipmap/login_002"
                    android:layout_centerVertical="true"
                    android:id="@+id/register_imageView_userName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <com.ziyawang.ziya.view.XEditText
                    android:paddingRight="5dp"
                    android:textColorHint="#ccc"
                    android:paddingLeft="15dp"
                    android:textColor="#ccc"
                    android:background="#00000000"
                    android:maxLength="13"
                    android:digits="1234567890"
                    android:layout_toRightOf="@id/register_imageView_userName"
                    android:hint="@string/register_editText_username"
                    android:id="@+id/register_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/login_uesrname"
                android:layout_marginTop="14dp"
                android:layout_below="@id/register_relative_userName"
                android:id="@+id/register_relative_smsCode"
                android:layout_width="match_parent"
                android:layout_height="38dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon041"
                    android:id="@+id/register_imageView_smsCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_toRightOf="@id/register_imageView_smsCode"
                    android:id="@+id/register_smsCode"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <EditText
                        android:inputType="phone"
                        android:textColorHint="#ccc"
                        android:paddingLeft="15dp"
                        android:textColor="#ccc"
                        android:background="#00000000"
                        android:maxLength="6"
                        android:digits="1234567890"
                        android:hint="@string/register_edit_smsCode"
                        android:id="@+id/register_editText_smsCode"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:textSize="10dp"
                        android:singleLine="true"
                        android:background="@drawable/register_button_send"
                        android:textColor="#ffffff"
                        android:hint="@string/register_button_getsmsCode"
                        android:id="@+id/register_button_get_smsCode"
                        android:layout_weight="2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/login_uesrname"
                android:layout_marginTop="14dp"
                android:layout_below="@id/register_relative_smsCode"
                android:id="@+id/register_relative_pwd_one"
                android:layout_width="match_parent"
                android:layout_height="38dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@mipmap/login_002"
                    android:id="@+id/register_imageView_pwd_one"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <com.ziyawang.ziya.view.XEditText
                    android:maxLength="16"
                    android:paddingRight="5dp"
                    android:textColorHint="#ccc"
                    android:paddingLeft="15dp"
                    android:textColor="#ccc"
                    android:background="#00000000"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789."
                    android:inputType="textPassword"
                    android:layout_toRightOf="@id/register_imageView_pwd_one"
                    android:id="@+id/register_editText_pwd_one"
                    android:hint="@string/register_editText_pwd_one"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:background="@drawable/login_uesrname"
                android:layout_marginTop="14dp"
                android:layout_below="@id/register_relative_pwd_one"
                android:id="@+id/register_relative_pwd_two"
                android:layout_width="match_parent"
                android:layout_height="38dp">

                <ImageView
                    android:layout_centerVertical="true"
                    android:src="@mipmap/icon051"
                    android:id="@+id/register_imageView_pwd_two"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <com.ziyawang.ziya.view.XEditText
                    android:maxLength="16"
                    android:paddingRight="5dp"
                    android:textColorHint="#ccc"
                    android:paddingLeft="15dp"
                    android:textColor="#ccc"
                    android:background="#00000000"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789."
                    android:inputType="textPassword"
                    android:layout_toRightOf="@id/register_imageView_pwd_two"
                    android:id="@+id/register_editText_pwd_two"
                    android:hint="@string/register_editText_pwd_two"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" />

            </RelativeLayout>

            <Button
                android:textSize="15dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/register_button"
                android:textColor="#ffffff"
                android:layout_centerHorizontal="true"
                android:id="@+id/register_button_register"
                android:layout_below="@id/register_relative_pwd_two"
                android:text="@string/findPwd_button_OK"
                android:layout_width="match_parent"
                android:layout_height="38dp" />

        </RelativeLayout>
    </ScrollView>





</RelativeLayout>
